--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "docs:preview": "vitepress preview docs"
   },
   "devDependencies": {
+    "@nolebase/vitepress-plugin-enhanced-readabilities": "^2.4.0",
+    "@nolebase/vitepress-plugin-git-changelog": "^2.4.0",
+    "@nolebase/vitepress-plugin-inline-link-preview": "^2.4.0",
     "postcss": "^8.4.38",
     "vitepress": "^1.2.2"
   }
