--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "devDependencies": {
     "@nolebase/vitepress-plugin-enhanced-readabilities": "^2.4.0",
+    "markdown-it-mathjax3": "^4.3.2",
     "postcss": "^8.4.38",
     "vitepress": "^1.2.2"
   }
